--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.5",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
@@ -30,6 +31,9 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.17.0",
     "knex-cleaner": "^1.2.1",
+    "mongodb": "^3.3.0-beta2",
+    "mongoose": "^5.6.7",
+    "multer": "^1.4.2",
     "pg": "^7.12.0",
     "sqlite3": "^4.0.8"
   },
